[package]
name = "apitabelrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.114"
actix-web = "4.0"
tokio-postgres = "0.7"
chrono = "0.4.35"
